2006-04-07 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.addin.xml: Add documentation.

2006-03-29 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineConfigurationPanel.cs:
	  Make the "configuraiton" column editable.
   
2006-03-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Projects.Gui.mdp: Updated.
	* Makefile.am: Use an unified format. Patch by Matze Braun.
	* MonoDevelop.Projects.Gui.addin.xml: Updated add-in versions.

2006-03-23 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs/CombineOptionsDialog.cs:
	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineConfigurationPanel.cs:
	  Save changes done in the entry configuration panel. Fixes bug #77716.

2006-03-12  David Makovský (Yakeen) <yakeen@sannyas-on.net>

        * Base.glade: Marking some strings not to be translated. Not include balast in pot file.

2006-02-19 Andrés G. Aragoneses  <knocte@gmail.com>

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/DeployFileOptions.cs:
	fixed a typo in a string.

2006-01-30 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs:
	Use LanguageItemCollection instead of ArrayList.

2006-01-25  Jacob Ilsø Christensen  <jacobilsoe@gmail.com>

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs:
	Removed duplication.

2006-01-14 Andrés G. Aragoneses  <knocte@gmail.com>

	* MonoDevelop.Projects.Gui.Dialogs/CombineOptionsDialog.cs: Replaced
	'Combine' by 'Solution'.
	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineStartupPanel.cs:
	Replaced 'Combine' by 'Solution'.

2006-01-10 Lluis Sanchez Gual  <lluis@novell.com>   

	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs:
	Track api changes.

2005-10-11  Lluis Sanchez Gual  <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml: Fixed addin header information.
	Use "id" attribuet instead of "name" to identify addins.